--- a/client/styles/eva.scss
+++ b/client/styles/eva.scss
@@ -34,7 +34,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 676px) {
   .eva {
     .column-header {
       width: 40%;
